fix: btn z-index

--- a/vr_club_site/templates/site/style/index.css
+++ b/vr_club_site/templates/site/style/index.css
@@ -337,7 +337,7 @@
     cursor: pointer;
     margin-left: auto;
     margin-right: auto;
-    z-index: 9999;
+    z-index: 999;
 }
 
 .section-rules-club {
@@ -688,7 +688,7 @@
         cursor: pointer;
         margin-left: auto;
         margin-right: auto;
-        z-index: 9999;
+        z-index: 999;
     }
 }
 
